2009-03-24  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extPervasives.ml: [printer_S] now uses [String.quote]

	* src/core/extlib/extPervasives.ml*: [printer_sc], [printer_Sc] added

	* src/core/extlib/extString.ml*: [String.Cap.print*], [String.Cap.quote] added

	* src/core/extlib/innerIO.ml: [read_all] now stops properly also on [Input_closed]

	* src/core/extlib/extLexing.ml: [from_channel] now raises [End_of_file]

	* src/libs/compilers/compilers.ml*: [interpreter_option] added

	* src/libs/compilers/compilers.ml*: [ocaml] added

	* src/batteries_toolchain/ocaml.in: now using "@DESTDIR@/toplevel.top"

	* src/core/baselib/batlib_Baselib_Lexing.*: removed
	
	* src/main/threads/batteries.ml: [ExtLexing.Lexing] replaces [Lexing]

	* src/main/nothreads/batteries.ml: [ExtLexing.Lexing] replaces [Lexing]

	* src/core/extlib.mlpack: [ExtLexing] added

	* src/core/extlib/extLexing.ml*: created

2009-03-24  Jeremie Dimino <jeremie@dimino.org>

	* src/batteries_toolchain/toplevel/cbtop.ml: hack to make syntax extensions to work for scripts
	
	* src/core/extlib/seq.ml*: created

	* src/core/extlib.mlpack: added [Seq]

2009-03-22  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/toplevel/cbtop.ml: general cleanup

2009-03-19  Jeremie Dimino <jeremie@dimino.org>

	* src/core/extlib/extUChar.ml*: added [lowercase], [uppercase], [icompare], [IUChar]
	
2009-03-22  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/toplevel/cbtop.ml: added

	* src/batteries_toolchain/ocaml.in: now using [cbtop.ml]

	* src/batteries_toolchain/toplevel.mltop: added

	* Makefile.in:[TOPLEVEL_TARGETS], [install] now make use of [toplevel.top]


2009-03-17  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/batteries_help.ml: in #browse, now replacing all non-alphanumerical characters

	* src/core/extlib/extList.mli: [takewhile], [dropwhile] moved down
